minor change to notes

--- a/Luminosity.ipynb
+++ b/Luminosity.ipynb
@@ -420,8 +420,9 @@
     "How can we do errors for this? I am thinking something of the form:\n",
     "$$\n",
     "    \\sigma_{\\Omega_\\Lambda} = \\Omega_\\Lambda \\sqrt{\\left(\\frac{\\sigma_{L_{eff}}}{L_{eff}}\\right)^2 +\n",
-    "                    \\left(\\frac{\\sigma_{fit}}{fit}\\right)^2}\n",
-    "$$"
+    "                    \\left(\\frac{\\sigma_{fit}}{fit}\\right)^2}~,\n",
+    "$$\n",
+    "where"
    ]
   },
   {
