--- a/six_parameter_model_lambdacdm.ipynb
+++ b/six_parameter_model_lambdacdm.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fitting a six parameter $\\Lambda CDM$ model\n",
+    "Fitting a six parameter $\\Lambda$CDM model\n",
     "-----------------------------------------\n",
     "\n",
     "The model is specified as follows:\n",
