--- a/union_v2_21_analysis.ipynb
+++ b/union_v2_21_analysis.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.93007798867\n",
+      "0.980960910493\n",
       "[[Fit Statistics]]\n",
       "    # function evals   = 46\n",
       "    # data points      = 580\n",
@@ -327,7 +327,7 @@
     "\n",
     "out = lmfit.minimize(for_fitting, params, args=(z, mag, mag_err), method='leastsq')\n",
     "\n",
-    "print(for_fitting(params, z, mag, mag_err).sum()/(57))\n",
+    "print(for_fitting(params, z, mag, mag_err).sum()/(580-3))\n",
     "print(lmfit.fit_report(out))"
    ]
   },
